fixed showcase grid z-index

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
   top: 0%;
   height: 100vh;
   width: 100vw;
+  z-index: 1;
 }
 
 #showcase .project-wrapper .block-grid .left-block {
@@ -138,10 +139,11 @@
   padding-top: 100vh;
   width: 100%;
   height: 300vh;
+  z-index: 1;
 }
 
 #showcase .project-wrapper .descriptions .description-wrapper {
-  margin: 0 0 100vh 0;
+  margin: 0 0 110vh 0;
   height: 30vh;
   display: -webkit-box;
   display: -ms-flexbox;
