--- a/scss/_showcase.scss
+++ b/scss/_showcase.scss
@@ -13,6 +13,7 @@
       top: 0%;
       height: 100vh;
       width: 100vw;
+      z-index: 1;
       .left-block {
         position: relative;
         position: -webkit-sticky;
@@ -72,9 +73,10 @@
       padding-top: 100vh;
       width: 100%;
       height: 300vh;
+      z-index: 1;
 
       .description-wrapper {
-        margin: 0 0 100vh 0;
+        margin: 0 0 110vh 0;
         height: 30vh;
         display: flex;
         flex-direction: column;
